# mnemix-workflow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  mxw-github-sync.yml  publish-python.yml
docs/: prd.md  release-checklist.md  slash-commands.md
docs/methodology/: naming-system.md
python/: README.md  pyproject.toml  setup.py
python/mnemix_workflow/: __init__.py  _runner.py  _version.py
python/tests/: test_runner.py
resources/commands/: close.md  explore.md  implement.md  status.md  sync.md  track.md
resources/hooks/: pre-commit-status-updated  pre-push-status-reminder
resources/skills/mnemix-workflow/: SKILL.md
scripts/: build-python-wheel-with-cli.sh  check-linux-release-build.sh  check-python-bundled-wheel.sh  check-python-package.sh  publish-release.sh  release.sh
src/: agent.rs  cli.rs  contracts.rs  github.rs  hooks.rs  lib.rs  scaffold.rs  status.rs
src/commands/: agent.rs  asyncapi.rs  github.rs  hooks.rs  init.rs  mod.rs  new.rs  openapi.rs  patch.rs  schema.rs  status.rs  ui.rs  validate.rs
src/tui/: data.rs  markdown.rs  mod.rs  render.rs  state.rs
tests/: cli.rs
workflow/: github.yml
workflow/decisions/: 001-workflow-artifact-root.md  002-bootstrap-with-one-skill.md  003-workstream-numbering.md  004-use-status-files-for-workstream-state.md  005-use-frontmatter-as-canonical-status-metadata.md  006-start-with-proposed-open-completed-status-values.md  007-resolve-planning-questions-during-workstream-creation.md  008-create-status-file-when-a-workstream-is-created.md  009-track-related-pull-requests-in-status-metadata.md  010-use-patches-for-lightweight-tracked-work.md  011-focus-standards-support-on-openapi-asyncapi-and-json-schema.md  README.md
workflow/patches/: 0001-formatted-markdown-preview-in-mnx.md  0002-product-focused-readme-and-mnx-ui-quickstart.md  0003-code-block-styling-in-mnx.md  0004-workflow-skill-cli-cleanup.md  0005-add-pull-request-ci-checks.md  0006-include-cargo-lock-in-release-prep.md  0007-add-release-notes-template.md  0008-align-release-checklist-with-script-flow.md
workflow/workstreams/001-bootstrap-mnemix-workflow/: STATUS.md  plan.md  spec.md  tasks.md  ux.md
workflow/workstreams/002-workflow-skill-bootstrap/: STATUS.md  plan.md  spec.md  tasks.md  ux.md
workflow/workstreams/003-cli-bootstrap/: STATUS.md  plan.md  spec.md  tasks.md  ux.md
workflow/workstreams/004-status-metadata-and-cli-support/: STATUS.md  plan.md  spec.md  tasks.md  ux.md
workflow/workstreams/005-interactive-tui-mode/: STATUS.md  plan.md  spec.md  tasks.md  ux.md
workflow/workstreams/007-contract-standards-support/: STATUS.md  (+4 more)
(+48 files in other folders)
